{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 231,
  "lineage": "5efd5395-f1fc-9e1e-5c6a-cf70526baad0",
  "resources": [
    {
      "module": "module.eks-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "module.eks-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:902329640757:security-group/sg-04915ff50f809b757",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-04915ff50f809b757",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06f4f78cfa7c37eac"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "kong-eks-sandbox-cluster-20230619063306759000000003",
            "name_prefix": "kong-eks-sandbox-cluster-",
            "owner_id": "902329640757",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kong-eks-sandbox-cluster"
            },
            "tags_all": {
              "Name": "kong-eks-sandbox-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-098fb5df603cdd76a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "module.eks-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:902329640757:security-group/sg-06f4f78cfa7c37eac",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06f4f78cfa7c37eac",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0332196db861e8aad",
                  "sg-03bce30e429539956",
                  "sg-06b3160481f90ce59",
                  "sg-0ce5ecd18b8d3f552"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04915ff50f809b757"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04915ff50f809b757"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04915ff50f809b757"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04915ff50f809b757"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04915ff50f809b757"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "kong-eks-sandbox-node-20230619063306756900000001",
            "name_prefix": "kong-eks-sandbox-node-",
            "owner_id": "902329640757",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kong-eks-sandbox-node",
              "kubernetes.io/cluster/kong-eks-sandbox": "owned"
            },
            "tags_all": {
              "Name": "kong-eks-sandbox-node",
              "kubernetes.io/cluster/kong-eks-sandbox": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-098fb5df603cdd76a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "module.eks-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3436530396",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04915ff50f809b757",
            "security_group_rule_id": "sgr-04171c4d9e6d16d12",
            "self": false,
            "source_security_group_id": "sg-06f4f78cfa7c37eac",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.module.eks.aws_security_group.cluster",
            "module.eks-cluster.module.eks.aws_security_group.node",
            "module.eks-cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "module.eks-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3283062802",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06f4f78cfa7c37eac",
            "security_group_rule_id": "sgr-034ea991f0f90aad1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.module.eks.aws_security_group.cluster",
            "module.eks-cluster.module.eks.aws_security_group.node",
            "module.eks-cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2739655902",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06f4f78cfa7c37eac",
            "security_group_rule_id": "sgr-0706f7a8659f287d5",
            "self": false,
            "source_security_group_id": "sg-04915ff50f809b757",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.module.eks.aws_security_group.cluster",
            "module.eks-cluster.module.eks.aws_security_group.node",
            "module.eks-cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1690082517",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06f4f78cfa7c37eac",
            "security_group_rule_id": "sgr-0ef2fd28a26249ba2",
            "self": false,
            "source_security_group_id": "sg-04915ff50f809b757",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.module.eks.aws_security_group.cluster",
            "module.eks-cluster.module.eks.aws_security_group.node",
            "module.eks-cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3198338914",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06f4f78cfa7c37eac",
            "security_group_rule_id": "sgr-0bd3f8c393a208b42",
            "self": false,
            "source_security_group_id": "sg-04915ff50f809b757",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.module.eks.aws_security_group.cluster",
            "module.eks-cluster.module.eks.aws_security_group.node",
            "module.eks-cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3657692329",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06f4f78cfa7c37eac",
            "security_group_rule_id": "sgr-03da4e4c2cd8ecfd9",
            "self": false,
            "source_security_group_id": "sg-04915ff50f809b757",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.module.eks.aws_security_group.cluster",
            "module.eks-cluster.module.eks.aws_security_group.node",
            "module.eks-cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1143577797",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06f4f78cfa7c37eac",
            "security_group_rule_id": "sgr-04e3a796c53fe540e",
            "self": false,
            "source_security_group_id": "sg-04915ff50f809b757",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.module.eks.aws_security_group.cluster",
            "module.eks-cluster.module.eks.aws_security_group.node",
            "module.eks-cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-922291408",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06f4f78cfa7c37eac",
            "security_group_rule_id": "sgr-0cfc23003ed17f92e",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.module.eks.aws_security_group.cluster",
            "module.eks-cluster.module.eks.aws_security_group.node",
            "module.eks-cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2684479734",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06f4f78cfa7c37eac",
            "security_group_rule_id": "sgr-00841ecfc9bad80b1",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.module.eks.aws_security_group.cluster",
            "module.eks-cluster.module.eks.aws_security_group.node",
            "module.eks-cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-73288473",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-06f4f78cfa7c37eac",
            "security_group_rule_id": "sgr-0bc62b7ff7a27b6df",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.module.eks.aws_security_group.cluster",
            "module.eks-cluster.module.eks.aws_security_group.node",
            "module.eks-cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.eks-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0667189cd7dc3776f",
            "association_id": "eipassoc-02850b3671dff6acf",
            "domain": "vpc",
            "id": "eipalloc-0667189cd7dc3776f",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0da4e6ca9f1fa9f6c",
            "private_dns": "ip-10-0-4-132.us-east-2.compute.internal",
            "private_ip": "10.0.4.132",
            "public_dns": "ec2-3-141-181-115.us-east-2.compute.amazonaws.com",
            "public_ip": "3.141.181.115",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "kong-vpc-us-east-2a"
            },
            "tags_all": {
              "Name": "kong-vpc-us-east-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.eks-cluster.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.eks-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:902329640757:internet-gateway/igw-08cdf77675a12b64a",
            "id": "igw-08cdf77675a12b64a",
            "owner_id": "902329640757",
            "tags": {
              "Name": "kong-vpc"
            },
            "tags_all": {
              "Name": "kong-vpc"
            },
            "vpc_id": "vpc-098fb5df603cdd76a"
          },
          "dependencies": [
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.eks-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0667189cd7dc3776f",
            "association_id": "eipassoc-02850b3671dff6acf",
            "connectivity_type": "public",
            "id": "nat-000710a1dcdd2417b",
            "network_interface_id": "eni-0da4e6ca9f1fa9f6c",
            "private_ip": "10.0.4.132",
            "public_ip": "3.141.181.115",
            "subnet_id": "subnet-07321a166804bb1f2",
            "tags": {
              "Name": "kong-vpc-us-east-2a"
            },
            "tags_all": {
              "Name": "kong-vpc-us-east-2a"
            }
          },
          "dependencies": [
            "module.eks-cluster.data.aws_availability_zones.available",
            "module.eks-cluster.module.vpc.aws_eip.nat",
            "module.eks-cluster.module.vpc.aws_internet_gateway.this",
            "module.eks-cluster.module.vpc.aws_subnet.public",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.eks-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-033256bcb9eaa87931080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-000710a1dcdd2417b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-033256bcb9eaa8793",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.data.aws_availability_zones.available",
            "module.eks-cluster.module.vpc.aws_eip.nat",
            "module.eks-cluster.module.vpc.aws_internet_gateway.this",
            "module.eks-cluster.module.vpc.aws_nat_gateway.this",
            "module.eks-cluster.module.vpc.aws_route_table.private",
            "module.eks-cluster.module.vpc.aws_subnet.public",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.eks-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08cdf77675a12b64a",
            "id": "r-rtb-09cd608906364c84c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09cd608906364c84c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.module.vpc.aws_internet_gateway.this",
            "module.eks-cluster.module.vpc.aws_route_table.public",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.eks-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:902329640757:route-table/rtb-033256bcb9eaa8793",
            "id": "rtb-033256bcb9eaa8793",
            "owner_id": "902329640757",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-000710a1dcdd2417b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kong-vpc-private"
            },
            "tags_all": {
              "Name": "kong-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-098fb5df603cdd76a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.data.aws_availability_zones.available",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.eks-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:902329640757:route-table/rtb-09cd608906364c84c",
            "id": "rtb-09cd608906364c84c",
            "owner_id": "902329640757",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08cdf77675a12b64a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kong-vpc-public"
            },
            "tags_all": {
              "Name": "kong-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-098fb5df603cdd76a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.eks-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe04aa38e0ad0019",
            "route_table_id": "rtb-033256bcb9eaa8793",
            "subnet_id": "subnet-0dbe7d97a0ccec158"
          },
          "dependencies": [
            "module.eks-cluster.data.aws_availability_zones.available",
            "module.eks-cluster.module.vpc.aws_route_table.private",
            "module.eks-cluster.module.vpc.aws_subnet.private",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a815333cf68285cf",
            "route_table_id": "rtb-033256bcb9eaa8793",
            "subnet_id": "subnet-098dd94052cda2f00"
          },
          "dependencies": [
            "module.eks-cluster.data.aws_availability_zones.available",
            "module.eks-cluster.module.vpc.aws_route_table.private",
            "module.eks-cluster.module.vpc.aws_subnet.private",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069f7f2e74ffffd57",
            "route_table_id": "rtb-033256bcb9eaa8793",
            "subnet_id": "subnet-082ddfb0c06e14c86"
          },
          "dependencies": [
            "module.eks-cluster.data.aws_availability_zones.available",
            "module.eks-cluster.module.vpc.aws_route_table.private",
            "module.eks-cluster.module.vpc.aws_subnet.private",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.eks-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b58e57d6ac2ca3a",
            "route_table_id": "rtb-09cd608906364c84c",
            "subnet_id": "subnet-07321a166804bb1f2"
          },
          "dependencies": [
            "module.eks-cluster.data.aws_availability_zones.available",
            "module.eks-cluster.module.vpc.aws_route_table.public",
            "module.eks-cluster.module.vpc.aws_subnet.public",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074cadb9fe0b0576b",
            "route_table_id": "rtb-09cd608906364c84c",
            "subnet_id": "subnet-0a0182977bbefe1de"
          },
          "dependencies": [
            "module.eks-cluster.data.aws_availability_zones.available",
            "module.eks-cluster.module.vpc.aws_route_table.public",
            "module.eks-cluster.module.vpc.aws_subnet.public",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6ac83ef37b8b365",
            "route_table_id": "rtb-09cd608906364c84c",
            "subnet_id": "subnet-0ade9b93c3a8b0c1c"
          },
          "dependencies": [
            "module.eks-cluster.data.aws_availability_zones.available",
            "module.eks-cluster.module.vpc.aws_route_table.public",
            "module.eks-cluster.module.vpc.aws_subnet.public",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.eks-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:902329640757:subnet/subnet-0dbe7d97a0ccec158",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dbe7d97a0ccec158",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "902329640757",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kong-vpc-private-us-east-2a",
              "kubernetes.io/cluster/kong-eks-sandbox": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "kong-vpc-private-us-east-2a",
              "kubernetes.io/cluster/kong-eks-sandbox": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-098fb5df603cdd76a"
          },
          "dependencies": [
            "module.eks-cluster.data.aws_availability_zones.available",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:902329640757:subnet/subnet-098dd94052cda2f00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098dd94052cda2f00",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "902329640757",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kong-vpc-private-us-east-2b",
              "kubernetes.io/cluster/kong-eks-sandbox": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "kong-vpc-private-us-east-2b",
              "kubernetes.io/cluster/kong-eks-sandbox": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-098fb5df603cdd76a"
          },
          "dependencies": [
            "module.eks-cluster.data.aws_availability_zones.available",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:902329640757:subnet/subnet-082ddfb0c06e14c86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082ddfb0c06e14c86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "902329640757",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kong-vpc-private-us-east-2c",
              "kubernetes.io/cluster/kong-eks-sandbox": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "kong-vpc-private-us-east-2c",
              "kubernetes.io/cluster/kong-eks-sandbox": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-098fb5df603cdd76a"
          },
          "dependencies": [
            "module.eks-cluster.data.aws_availability_zones.available",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.eks-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:902329640757:subnet/subnet-07321a166804bb1f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07321a166804bb1f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "902329640757",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kong-vpc-public-us-east-2a",
              "kubernetes.io/cluster/kong-eks-sandbox": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "kong-vpc-public-us-east-2a",
              "kubernetes.io/cluster/kong-eks-sandbox": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-098fb5df603cdd76a"
          },
          "dependencies": [
            "module.eks-cluster.data.aws_availability_zones.available",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:902329640757:subnet/subnet-0a0182977bbefe1de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0182977bbefe1de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "902329640757",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kong-vpc-public-us-east-2b",
              "kubernetes.io/cluster/kong-eks-sandbox": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "kong-vpc-public-us-east-2b",
              "kubernetes.io/cluster/kong-eks-sandbox": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-098fb5df603cdd76a"
          },
          "dependencies": [
            "module.eks-cluster.data.aws_availability_zones.available",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:902329640757:subnet/subnet-0ade9b93c3a8b0c1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ade9b93c3a8b0c1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "902329640757",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kong-vpc-public-us-east-2c",
              "kubernetes.io/cluster/kong-eks-sandbox": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "kong-vpc-public-us-east-2c",
              "kubernetes.io/cluster/kong-eks-sandbox": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-098fb5df603cdd76a"
          },
          "dependencies": [
            "module.eks-cluster.data.aws_availability_zones.available",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.eks-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:902329640757:vpc/vpc-098fb5df603cdd76a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09ef7adfd9c29f5bf",
            "default_route_table_id": "rtb-036678f8e332c7a23",
            "default_security_group_id": "sg-0dd06b0971af43345",
            "dhcp_options_id": "dopt-0840bb95940857207",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-098fb5df603cdd76a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-036678f8e332c7a23",
            "owner_id": "902329640757",
            "tags": {
              "Name": "kong-vpc"
            },
            "tags_all": {
              "Name": "kong-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}